# export_merged_pull_requests

./: .env.template  .gitignore  README.md  pyproject.toml
scripts/: collect_pull_requests.py
tests/: tests_collect_pull_requests.py
